<resources>
    <string name="app_name">Calculadora</string>
    <string name="titulo">Calculadora</string>
    <string name="resultado">RESULTADO</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="dividir">/</string>
    <string name="multiplicar">*</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="borrar">Borrar</string>
    <string name="igual">=</string>
    <string name="cero">0</string>
</resources>
