<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center" />

        <GridLayout

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:rowCount="4"
            android:columnCount="4"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnMas"
                android:text="@string/mas"
                android:onClick="mas"/>

            <Button
                android:id="@+id/btnMenos"
                android:text="@string/menos"
                android:onClick="menos"/>

            <Button
                android:id="@+id/btnDividir"
                android:text="@string/dividir"
                android:onClick="dividir"/>

            <Button
                android:id="@+id/btnMultiplicar"
                android:text="@string/multiplicar"
                android:onClick="multiplicar"/>

            <Button
                android:id="@+id/btn7"
                android:text="@string/siete"
                android:onClick="siete"/>
            <Button
                android:id="@+id/btn8"
                android:text="@string/ocho"
                android:onClick="ocho"/>
            <Button
                android:id="@+id/btn9"
                android:text="@string/nueve"
                android:onClick="nueve"/>
            <Button
                android:id="@+id/btn0"
                android:text="@string/cero"
                android:onClick="cero"/>

            <Button
                android:id="@+id/btn4"
                android:text="@string/cuatro"
                android:onClick="cuatro"/>
            <Button
                android:id="@+id/btn5"
                android:text="@string/cinco"
                android:onClick="cinco"/>
            <Button
                android:id="@+id/btn6"
                android:text="@string/seis"
                android:onClick="seis"/>
            <Button
                android:id="@+id/btnBorrar"
                android:text="@string/borrar"
                android:onClick="borrar"/>

            <Button
                android:id="@+id/btn1"
                android:text="@string/uno"
                android:onClick="uno"/>
            <Button
                android:id="@+id/btn2"
                android:text="@string/dos"
                android:onClick="dos"/>
            <Button
                android:id="@+id/btn3"
                android:text="@string/tres"
                android:onClick="tres"/>
            <Button
                android:id="@+id/btnIgual"
                android:text="@string/igual"
                android:onClick="igual"/>

        </GridLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>